--- a/akinator/index.html
+++ b/akinator/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>
     <header>
-        <h1>🎲 GUESSING GAME 🎲</h1>
+        <h1>🎲 SEGREDO DO GÊNIO 🎲</h1>
     </header>
-    <section>
-        <h2 id="txt">Adivinhe o número entre 1 e 100</h2>
-        <img id="img" alt="" src="akinator.png"><br>
-        <input type="number" id="input">
-        <br>
-        <button id="btn">check</button>
-        <p>Número de tentativas:</p>
-        <label id="tentativas">0</label>
-    </section>
+
+    <main>
+        <section>
+            <h2 id="txt">Adivinhe o número entre 1 e 100</h2>
+            <img id="img" alt="" src="genio.png"><br>
+            <input type="number" id="input">
+            <br>
+            <button id="btn">check</button>
+            <p>Número de tentativas:</p>
+            <label id="tentativas">0</label>
+        </section>
+    </main>
+
     <footer>
         <p>&copy; CarlaAlves</p>
     </footer>
